tests/ui/parser/use-unclosed-brace.stderr
error: this file contains an unclosed delimiter
  --> $DIR/use-unclosed-brace.rs:61:27
   |
LL | use foo::{bar, baz;
   |          - unclosed delimiter
...
LL | // Simple Path Resolution
   |                           ^

error: aborting due to 1 previous error

